# seabird-adventofcode-plugin

./: .dockerignore  .gitignore  .woodpecker.yml  Dockerfile  README.md  aoc_client.go  entrypoint.sh  flake.nix  go.mod  go.sum  plugin.go  plugin_test.go  pyproject.toml  utils.go
adventofcode/: __init__.py  __main__.py  handlers.py  leaderboard.py
cmd/seabird-adventofcode-plugin/: main.go
sample_plugin/: __init__.py  __main__.py
