[tool.black]
line-length = 100

[tool.poetry]
name = "seabird-adventofcode-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofile = "^3.3.0"
aiohttp = "^3.7.0"
humanize = "^3.1.0"
python-dotenv = "^0.15.0"
python-seabird = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
