[tool.black]
line-length = 100

[tool.poetry]
name = "seabird-adventofcode-plugin"
version = "0.2.0"
description = ""
authors = ["Kaleb Elwert <belak@coded.io>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofile = "^3.8.0"
aiohttp = "^3.8.0"
humanize = "^4.4.0"
python-dotenv = "^0.21.0"
python-seabird = "^0.1.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
